--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "body-parser": "^1.12.0",
     "express": "^4.8.7",
-    "mysql": "^2.5.5",
-    "rand-token": "^0.2.1"
+    "mysql": "^2.5.5"
   },
   "scripts": {
     "start": "node server.js"
